cover.css
a, a:focus, a:hover {
  color: #fff;
}

html {
  height: 100%;
  min-width: 1030px;
  
  /* justify-content: center; */
}

#about {
  min-width: 800px;
}

#junk {
  text-align: center;
}

body {
  display: grid;
  height: 100%;
  width: 100%;
  min-width: 1000px;
  background-color: white;
  justify-content: center;
}

main {
  background-color: white;
}

#about_me {
  justify-content: center;
}

#console_text_1, #console_text_2, #console_text_3, #console_text_4, #console_text_5 {
  font-size: xx-small;
}

#console_text_6 {
  font-size: x-large;
}

/* #animated_string{
  flex: 100%;
  flex: 100%;
} */

.logo_container > :first-child ~ * {
  position: absolute;
  top: 30%;
  right: 0;
  bottom: 0;
  left: 43%;
}
/* 
.links {
  margin-top: 80px;
} */

/* #button_description {
  padding: 0;
  margin: 0%;
} */

.line-devices5 {animation:line-devices5 4s -2s infinite; stroke-dasharray: 240; stroke-dashoffset: 240;}
@keyframes line-devices5 {
  20%{stroke-dashoffset: 240;}
  60%{stroke-dashoffset: 0;}
  100%{stroke-dashoffset: 0;}
}
@media (prefers-reduced-motion: reduce) {
  .line-devices5 {
    animation: none;
  }
}

.line-movie-reel1 {
  animation:line-movie-reel1 2s linear infinite; transform-origin: 49.5px 50.5px;
}

@keyframes line-movie-reel1 {
  100%{transform: rotate(360deg);}
}

@media (prefers-reduced-motion: reduce) {
  .line-movie-reel1 {
    animation: none;
  }
}

/* This only changes this particular animation duration */
.animate__animated.animate__bounce {
  --animate-duration: 2s;
}

/* This changes all the animations globally */
:root {
  --animate-duration: 800ms;
  --animate-delay: 0.9s;
}

.sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

#navbar {
  overflow: hidden;
  background-color: white;
}

.icon {
  min-width: 40px;
}

#third_icon {
  padding-top: 0px;
  background-color: transparent;
  border-radius: 30px;
  opacity: 100%;
}

.sticky + .content {
  padding-top: 60px;
}

/* #computer {
  margin-bottom: 50px;
} */

.terminal_class {
  margin-bottom: 50px;
  position: absolute;
  z-index:1;
  bottom:20em;
  min-width: 220px;
  max-width: 220px;
  max-height: 130px;
  min-height: 130px;
  /* height: 130px;
  width: 220px; */
  left: 0;
}

#content_box {
  visibility: hidden;
}

#content_row {
  height: 1070px;
}

#terminal {
  visibility: hidden;


}

#wrapper {
  height: 100%;
  /* min-width: 800px;
  max-width: 800px; */
  width: 800px;
}

.mac {
  position: relative;
  height: 100%;
  width: 100%;
  /* font-size:1vw; */
  min-width: 800px;
  max-width: 800px;
}

/* .btn-secondary, .btn-secondary:hover, .btn-secondary:focus {
  color: #333;
  text-shadow: none; 
  background-color: #fff;
  border: .05rem solid #fff;
} */

/* .name_intro {
  display: flex;
  justify-content: center;
} */

/* html {
  height: 100%;
  background-color: #333;
} */

/* .card-body {
  display: -ms-flexbox;
  display: flex;
  color: #fff;
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
} */

/* .cover-container {
  max-width: 60em;
} */

/* #svg {
  margin-bottom: 10rem;
  margin-top: -15rem;
} */

/* .masthead {
  margin-top: 0rem;
  margin-bottom: 0rem;
} */

/* .masthead-brand {
  margin-top: 0rem;
  padding:0;
} */

/* .nav-masthead .nav-link {
  padding: .1rem 0;
  font-weight: 700;
  color: rgba(255, 255, 255, .5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;
} */

/* .nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255, 255, 255, .25);
} */

/* .nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
} */

/* .nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
} */

/* @media (min-width: 48em) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
} */

/* .cover {
  padding: 0 1.5rem;
} */
/* 
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: 700;
} */
/* 
.mastfoot {
  color: rgba(255, 255, 255, .5);
} */

/* .card{
  background-color: #333;
  margin: 1rem;
} */

/* #terminal {
  position: 0, 0;
  color: rgba(255, 255, 255, .5);
} */

